# parser_hubs

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
docker_script/: app.sh
docs/: technical_specification.md
src/: logging_config.py  manage.py
src/app/: celery.py  settings.py  urls.py
src/articles/: apps.py  models.py  parser.py  services.py  tasks.py
src/articles/migrations/: 0001_initial.py  0002_alter_article_date.py
src/fixtures/hubs/: data.json
src/fixtures/users/: superuser.json
src/http_client/: aiohttp_client.py  http_client_interface.py
src/hubs/: admin.py  apps.py  models.py  services.py
src/hubs/migrations/: 0001_initial.py
src/parsers/: parser_articles.py  utils.py
