[tool.poetry]
name = "habsparser"
version = "0.1.0"
description = ""
authors = ["Никита Швейцер <shveitcer2023@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
python-decouple = "^3.8"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.9.3"
aiodns = "^3.1.1"
uvicorn = "^0.27.1"
psycopg2 = "^2.9.9"
apscheduler = "^3.10.4"
celery = {extras = ["redis"], version = "^5.3.6"}
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
